@@ -47,6 +47,7 @@ disentry dlist[]={
 {adds, "adds", D_NONE},
 {andandd, "andandd", D_NONE},
 {andd, "andd", D_NONE},
+{arc, "arc", D_NONE},
 {arrayd, "arrayd", D_VARIABLE},
 {arrays, "arrays", D_VARIABLE},
 {ascd, "ascd", D_NONE},
@@ -149,6 +150,7 @@ disentry dlist[]={
 {ticksd, "ticksd", D_NONE},
 {vald, "vald", D_NONE},
 {vol, "vol", D_NONE},
+{wedge, "wedge", D_NONE},
 {wsaw, "wsaw", D_NONE},
 {wsin, "wsin", D_NONE},
 {wsqr, "wsqr", D_NONE},
